use root pane's glass pane to paint project opening progress
GitOrigin-RevId: 7745e81c284b7d2733db537abeefb6cd63df58cb